jitsi/overlays/development/jvb-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: jitsi
  name: jvb
spec:
  template:
    spec:
      containers:
        - name: prometheus-exporter
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"
        - name: jvb
          resources:
            requests:
              cpu: "1000m"
              memory: "600Mi"
            limits:
              cpu: "1500m"
              memory: "1000Mi"
