jitsi/overlays/development/jitsi-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jitsi-ingress
  namespace: jitsi
spec:
  tls:
  - hosts:
    - jitsi.dev.messenger.schule
    secretName: jitsi-messenger-schule-tls
  rules:
    - host: jitsi.dev.messenger.schule
